--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,38 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.463
+head: 1.468
 branch:
 locks: strict
-	gilles: 1.463
+	gilles: 1.468
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 463;	selected revisions: 463
+total revisions: 468;	selected revisions: 468
 description:
 ----------------------------
-revision 1.463	locked by: gilles;
+revision 1.468	locked by: gilles;
+date: 2011/11/18 01:23:37;  author: gilles;  state: Exp;  lines: +33 -105
+Replaced fetch_hash_2() calls by normal fetch_hash()
+----------------------------
+revision 1.467
+date: 2011/11/17 15:00:15;  author: gilles;  state: Exp;  lines: +20 -16
+Subscribe to host2 folders only for those not already subscribed.
+----------------------------
+revision 1.466
+date: 2011/11/17 14:31:55;  author: gilles;  state: Exp;  lines: +76 -60
+Use examine() on host1 instead of select().
+----------------------------
+revision 1.465
+date: 2011/11/17 14:02:53;  author: gilles;  state: Exp;  lines: +22 -22
+Changed imapsync homepage from http://www.linux-france.org/prj/imapsync/ to http://imapsync.lamiral.info/
+Fix select behavior on host2 to allow Gmail folders that don't exist but that are listed.
+----------------------------
+revision 1.464
+date: 2011/11/14 23:59:46;  author: gilles;  state: Exp;  lines: +8 -8
+Replaced // by ? : equivalent to be perl 5.8 compliant.
+----------------------------
+revision 1.463
 date: 2011/11/12 21:58:52;  author: gilles;  state: Exp;  lines: +9 -7
 --subscribe is on by defaut.
 ----------------------------
