--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.20 2011/05/07 02:14:58 gilles Exp gilles $
+# $Id: INSTALL,v 1.21 2011/11/17 08:07:03 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -6,15 +6,15 @@
 INTRODUCTION
 ------------
 
- imapsync works fine under any Unix OS with perl.
- imapsync.exe works fine under Windows XP, Vista, Seven, 20XX.
+ imapsync works fine under any operating system with Perl and Perl modules (listed below).
+ imapsync.exe works fine standalone under Windows XP, Vista, Seven, 20XX, either 32 or 64bit.
 
 
 UNIX
 ----
 
- Buy imapsync at
- http://www.linux-france.org/prj/imapsync/
+ Purchase imapsync at
+ http://imapsync.lamiral.info/
  You'll have access to a compressed tarball called imapsync-x.xx.tgz
  where x.xx is the version number. Untar the tarball where
  you want (on Unix):
@@ -27,11 +27,10 @@ UNIX
 WINDOWS
 -------
 
-
 a) Simplest way:
 
-- Buy imapsync.exe at http://www.linux-france.org/prj/imapsync/
-- Use imapsync.exe.
+- Buy imapsync.exe at http://imapsync.lamiral.info/
+- Run imapsync.exe in a command prompt (execute cmd.exe).
 
 b) Hard way:
 
@@ -40,7 +39,6 @@ b) Hard way:
   Strawberry Perl is a good candidate
 - Use PPM to install modules listed in the PREREQUISITES section.
   PPM is Perl Package Manager.
-
 
 
 PREREQUISITES 
