--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.463 $
+    $Revision: 1.468 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -20,12 +20,12 @@ INSTALL
      with Strawberry Perl 5.10 or 5.12
      or as a standalone binary software imapsync.exe
 
-    imapsync is already available directly on the following distributions
-    (at least): FreeBSD, Debian, Ubuntu, Gentoo, Fedora, NetBSD, Darwin,
-    Mandriva and OpenBSD.
+    imapsync can be available directly on the following distributions:
+    FreeBSD, Debian, Ubuntu, Gentoo, Fedora, NetBSD, Darwin, Mandriva and
+    OpenBSD.
 
-     Get imapsync at
-     http://www.linux-france.org/prj/imapsync/
+     Purchase latest imapsync at
+     http://imapsync.lamiral.info/
 
      You'll receive a link to a compressed tarball called imapsync-x.xx.tgz
      where x.xx is the version number. Untar the tarball where
@@ -35,9 +35,10 @@ INSTALL
 
      Go into the directory imapsync-x.xx and read the INSTALL file.
      The INSTALL file is also at 
-     http://www.linux-france.org/prj/imapsync/INSTALL
+     http://imapsync.lamiral.info/INSTALL
 
-     The freshmeat record is at http://freshmeat.net/projects/imapsync/
+     The freecode (was freshmeat) record is at 
+     http://freecode.com/projects/imapsync
 
 USAGE
      imapsync [options]
@@ -238,7 +239,7 @@ BUG REPORT GUIDELINES
     author.
 
     Before reporting bugs, read the FAQ, the README and the TODO files.
-    http://www.linux-france.org/prj/imapsync/
+    http://imapsync.lamiral.info/
 
     Upgrade to last imapsync release, maybe the bug is already fixed.
 
@@ -442,5 +443,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.463 2011/11/12 21:58:52 gilles Exp gilles $
+    $Id: imapsync,v 1.468 2011/11/18 01:23:37 gilles Exp gilles $
 
