--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.103 2011/11/12 21:59:35 gilles Exp gilles $
+# $Id: TODO,v 1.104 2011/11/17 15:45:57 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -48,13 +48,6 @@ e-mail when it gets synced, rather than just the message ID and the date/time.
 Add a well described problem for each problem detected
 and counted in error counter statistics.
 
-Add yahoo imap support:
-http://elearningcentral.blogspot.com/2010/07/how-to-use-imapsync-with-yahoo-imap.html
-http://www.bwebcentral.com/utils/imapsync-yahoo
-See patches/imapsync-yahoo
-
-
-
 Add "output to reflect everything that imapsync was doing".
 Not everything but flag synchronization will be nice"
 
@@ -75,10 +68,7 @@ Peer Heinlein.
 Add different levels of output to see clearly the
 problem by default.
 
-Add option --exclude_messages_with_flag
-
 Add more information about skipped messages.
-
 
 Add Rick Romero patch with
 --quiet   No output at all
@@ -89,7 +79,6 @@ Simon Bertrang said "way better performance, less problems, easier to use and no
 issues so far". Sounds good! 
 
 Add an option to implement the faq entry about copying a contact folder.
-
 
 imapsync doesn't report well. It should says "I had
 to sync 123 messages but I could transfer only 99 messages"
@@ -163,7 +152,18 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
 
-DONE. Add --subscribe by default.
+DONE. The --search option allows this (and many other things)
+Add option --exclude_messages_with_flag
+
+DONE. (yahoo login is standard now)
+Add yahoo imap support:
+http://elearningcentral.blogspot.com/2010/07/how-to-use-imapsync-with-yahoo-imap.html
+http://www.bwebcentral.com/utils/imapsync-yahoo
+See patches/imapsync-yahoo
+
+
+DONE. Add --subscribe by default. 
+Subscribe only when needed (not already subscribed).
 
 DONE. Ask Nick Czeczulin why he wrote patent "Method for mailbox migration"
 http://www.google.com/patents/about?id=qI_IAAAAEBAJ
