--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,52 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.468
+head: 1.476
 branch:
 locks: strict
-	gilles: 1.468
+	gilles: 1.476
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 468;	selected revisions: 468
+total revisions: 476;	selected revisions: 476
 description:
 ----------------------------
-revision 1.468	locked by: gilles;
+revision 1.476	locked by: gilles;
+date: 2011/12/10 01:33:50;  author: gilles;  state: Exp;  lines: +34 -8
+Applied Ameir Abdeldayem patch to deal with errors like
+"Host1 Sent/15 size 1428 ignored (no header so we ignore this message)"
+It happens with Sent folder when no Message-Id nor Received header
+are defined in a message.
+----------------------------
+revision 1.475
+date: 2011/12/08 08:23:16;  author: gilles;  state: Exp;  lines: +7 -7
+Default header used to identify a message are now "Message-Id" and "Received".
+----------------------------
+revision 1.474
+date: 2011/12/02 20:30:16;  author: gilles;  state: Exp;  lines: +9 -9
+Default down from 1000 to --split1 500. (Cyrus "Word too long")
+----------------------------
+revision 1.473
+date: 2011/12/01 14:06:23;  author: gilles;  state: Exp;  lines: +8 -8
+Fixed output. fetch_hash_2 no longer exists.
+----------------------------
+revision 1.472
+date: 2011/12/01 12:44:48;  author: gilles;  state: Exp;  lines: +11 -6
+Added start and end dates in the final statistics.
+----------------------------
+revision 1.471
+date: 2011/11/24 09:29:26;  author: gilles;  state: Exp;  lines: +21 -20
+Checked and updated "Similar softwares" section in documentation.
+----------------------------
+revision 1.470
+date: 2011/11/23 18:14:20;  author: gilles;  state: Exp;  lines: +7 -7
+typo
+----------------------------
+revision 1.469
+date: 2011/11/20 17:44:35;  author: gilles;  state: Exp;  lines: +16 -9
+Added --nofilterflags to chech STORE flags ignoring PERMANENTFLAGS (Exchange tests)
+----------------------------
+revision 1.468
 date: 2011/11/18 01:23:37;  author: gilles;  state: Exp;  lines: +33 -105
 Replaced fetch_hash_2() calls by normal fetch_hash()
 ----------------------------
