--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.21 2011/11/17 08:07:03 gilles Exp gilles $
+# $Id: INSTALL,v 1.22 2011/12/10 02:27:04 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -110,10 +110,22 @@ Here is some individual module help:
 - Perl Authen::NTLM
   perl -mAuthen::NTLM -e ''
 
-Everything in one command:
+Test everything in one command:
 
   perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL \
        -mFile::Spec -mDigest::HMAC_MD5 -mAuthen::NTLM -e ''
+
+You can install automatically those Perl modules via the
+following commands (with root permissions)
+
+  perl -MCPAN -e 'install Mail::IMAPClient' 
+  perl -MCPAN -e 'install Digest::MD5' 
+  perl -MCPAN -e 'install Term::ReadKey' 
+  perl -MCPAN -e 'install IO::Socket::SSL' 
+  perl -MCPAN -e 'install File::Spec' 
+  perl -MCPAN -e 'install Digest::HMAC_MD5' 
+  perl -MCPAN -e 'install Authen::NTLM' 
+
 
 INSTALLING on Unix
 ------------------
@@ -122,7 +134,7 @@ To see what will be done, just run:
 
   make -n install
 
-To install imapsync, just run:
+To install imapsync, just run (as root):
 
   make install
 
