--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 NAME
     imapsync - IMAP synchronisation, sync, copy or migration tool.
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
-    More than 36 different IMAP server softwares supported with success.
+    More than 44 different IMAP server softwares supported with success.
 
-    $Revision: 1.468 $
+    $Revision: 1.476 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -111,9 +111,7 @@ DESCRIPTION
     sides. Same headers and the transfer is done only once. All flags are
     preserved, unread will stay unread, read will stay read, deleted will
     stay deleted. You can stop the transfer at any time and restart it
-    later, imapsync works well with bad connections. imapsync is CPU hungry
-    so nice and renice commands can be a good help. imapsync can be memory
-    hungry too, especially with large messages.
+    later, imapsync works well with bad connections.
 
     You can decide to delete the messages from the source mailbox after a
     successful transfer (it is a good feature when migrating). In that case,
@@ -124,6 +122,11 @@ DESCRIPTION
 
     You can also just synchronize a mailbox A from another mailbox B in case
     you just want to keep a "live" copy of B in A (--delete2 may help)
+
+    imapsync is not adequate for maintaining two active imap accounts in
+    synchronization where the user plays independently on both sides. Use
+    offlineimap (written by John Goerzen) or mbsync (written by Michael R.
+    Elkins) for 2 ways synchronizations.
 
 OPTIONS
     To get a description of each option just invoke:
@@ -423,25 +426,22 @@ Links
 
 SIMILAR SOFTWARES
       imap_tools    : http://www.athensfbc.com/imap_tools
-      offlineimap   : http://software.complete.org/offlineimap
+      offlineimap   : https://github.com/nicolas33/offlineimap
+      mbsync        : http://isync.sourceforge.net/
       mailsync      : http://mailsync.sourceforge.net/
-      imapxfer      : http://www.washington.edu/imap/
-                       part of the imap-utils from UW.
-      mailutil      : replace imapxfer in 
-                       part of the imap-utils from UW.
-                      http://www.gsp.com/cgi-bin/man.cgi?topic=mailutil
+      mailutil      : http://www.washington.edu/imap/
+                      part of the UW IMAP tookit.
       imaprepl      : http://www.bl0rg.net/software/
-                      http://freshmeat.net/projects/imap-repl/
-      imap_migrate  : http://freshmeat.net/projects/imapmigration/
+                      http://freecode.com/projects/imap-repl/
       imapcopy      : http://home.arcor.de/armin.diehl/imapcopy/imapcopy.html
       migrationtool : http://sourceforge.net/projects/migrationtool/
       imapmigrate   : http://sourceforge.net/projects/cyrus-utils/
       wonko_imapsync: http://wonko.com/article/554
-                      see also tools/wonko_ruby_imapsync
-      isync         : http://isync.sourceforge.net/
+                      see also file W/tools/wonko_ruby_imapsync
+      exchange-away : http://exchange-away.sourceforge.net/
       pop2imap      : http://www.linux-france.org/prj/pop2imap/
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.468 2011/11/18 01:23:37 gilles Exp gilles $
+    $Id: imapsync,v 1.476 2011/12/10 01:33:50 gilles Exp gilles $
 
